--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 </head>
 <body>
     <ul>
-        <li><a class="active" href="/home">Home</a></li>
-        <li><a href="/apps">Our Applications</a></li>
-        <li><a href="/contact">Contact Us</a></li>
-        <li style="float:right"><a href="/about">About K-Studios</a></li>
+        <li><a class="active" href="https://exkayem.github.io/K-Studios_Website/">Home</a></li>
+        <li><a href="/K-Studios_Website/apps">Our Applications</a></li>
+        <li><a href="/K-Studios_Website/contact">Contact Us</a></li>
+        <li style="float:right"><a href="/K-Studios_Website/about">About K-Studios</a></li>
     </ul>
 </body>
 </html>
