--- a/apps.html
+++ b/apps.html
@@ -47,7 +47,7 @@
 <body>
     <ul>
         <li><a class="active" href="/home">Home</a></li>
-        <li><a href="/apps">Our Applications</a></li>
+        <li><a class="active" href="/apps">Our Applications</a></li>
         <li><a href="/contact">Contact Us</a></li>
         <li style="float:right"><a href="/about">About K-Studios</a></li>
     </ul>
