--- a/contact.html
+++ b/contact.html
@@ -46,9 +46,9 @@
 </head>
 <body>
     <ul>
-        <li><a class="active" href="/home">Home</a></li>
+        <li><a href="/home">Home</a></li>
         <li><a href="/apps">Our Applications</a></li>
-        <li><a href="/contact">Contact Us</a></li>
+        <li><a class="active" href="/contact">Contact Us</a></li>
         <li style="float:right"><a href="/about">About K-Studios</a></li>
     </ul>
 </body>
