--- a/apps.html
+++ b/apps.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>K-Studios - Home</title>
+<title>K-Studios - Applications</title>
 <style>
     ul {
         list-style-type: none;
@@ -46,10 +46,10 @@
 </head>
 <body>
     <ul>
-        <li><a href="/home">Home</a></li>
-        <li><a class="active" href="/apps">Our Applications</a></li>
-        <li><a href="/contact">Contact Us</a></li>
-        <li style="float:right"><a href="/about">About K-Studios</a></li>
+        <li><a href="https://exkayem.github.io/K-Studios_Website/">Home</a></li>
+        <li><a class="active" href="/K-Studios_Website/apps.html">Our Applications</a></li>
+        <li><a href="/K-Studios_Website/contact.html">Contact Us</a></li>
+        <li style="float:right"><a href="/K-Studios_Website/about.html">About K-Studios</a></li>
     </ul>
 </body>
 </html>
