--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>K-Studios - Home</title>
+<title>K-Studios - About K-Studios</title>
 <style>
     ul {
         list-style-type: none;
