--- a/apps.html
+++ b/apps.html
@@ -47,9 +47,9 @@
 <body>
     <ul>
         <li><a href="https://exkayem.github.io/K-Studios_Website/">Home</a></li>
-        <li><a class="active" href="/K-Studios_Website/apps.html">Our Applications</a></li>
-        <li><a href="/K-Studios_Website/contact.html">Contact Us</a></li>
-        <li style="float:right"><a href="/K-Studios_Website/about.html">About K-Studios</a></li>
+        <li><a class="active" href="/apps.html">Our Applications</a></li>
+        <li><a href="/contact.html">Contact Us</a></li>
+        <li style="float:right"><a href="/about.html">About K-Studios</a></li>
     </ul>
 </body>
 </html>
