Updated about.html {Fixed}

--- a/about.html
+++ b/about.html
@@ -47,9 +47,9 @@
 <body>
     <ul>
         <li><a href="https://exkayem.github.io/K-Studios_Website/">Home</a></li>
-        <li><a href="/apps">Our Applications</a></li>
-        <li><a href="/contact">Contact Us</a></li>
-        <li style="float:right"><a class="active" href="/about">About K-Studios</a></li>
+        <li><a href="https://exkayem.github.io/K-Studios_Website/apps">Our Applications</a></li>
+        <li><a href="https://exkayem.github.io/K-Studios_Website/contact">Contact Us</a></li>
+        <li style="float:right"><a class="active" href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
     </ul>
 </body>
 </html>
