--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>K-Studios - About K-Studios</title>
-<link rel="icon" type="image/x-icon" href="https://exkayem.github.io/K-Studios_Website/favicon.ico">
+<link rel="icon" type="image/x-icon" href="/K-Studios_Website/favicon.ico">
 <style>
     ul {
         list-style-type: none;
