Updated about.html (14.11.2023)

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                 background-attachment: fixed;
             }
     #customers {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Audiowide, sans-serif;
   border-collapse: collapse;
   width: 100%;
 }
@@ -64,6 +64,10 @@
   text-align: left;
   background-color: #04AA6D;
   color: white;
+}
+
+#customers td {
+    color: white;
 }
 </style>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
@@ -115,5 +119,36 @@
     <td>STAFF</td>
   </tr>
 </table>
+    <br>
+    <br>
+    <br>
+    <h1 align="center" style="font-family:Audiowide, sans-serif;">About K-Studios</h1>
+    <br>
+    <h4 align="center" style="font-family:Audiowide, sans-serif;color:#1976D2;">Short Information</h4>
+    <p align="center">K-Studios stands for Kacper Studios, which is a small studio of a few people whose passion is creating and developing games, apps, websites and even some of the PC programs.</p>
+    <br>
+    <br>
+    <h4 align="center" style="font-family:Audiowide, sans-serif;color:#1976D2;">K-Studios' History</h4>
+    <h4 align="center" style="color:#1976D2;">• FIGHTZONE®:</h4>
+    <br>
+    <p align="center">Firstly K-Studios was named FIGHTZONE® and we were mainly creating and developing games on the Roblox platform. We were a bit popular since our start and we have been a trusted Studio. Sadly our Studio has been announced for discontinuation in the early 2020.</p>
+    <br>
+    <br>
+    <br>
+    <h4 align="center" style="color:#1976D2;">• GreenZone®:</h4>
+    <br>
+    <p align="center">Afterwards our Studio has been replaced with the name GreenZone® and a totally new HR Team but we had the same people in lower positions. We were continuing the games on the Roblox platform but we also created our own Minecraft servers. To not lie we were more motivated on Minecraft than Roblox. Sadly shortly afterwards, in April, we were abandoned by the most important persons in our HR Team leading to another discontinuation.</p>
+    <br>
+    <br>
+    <br>
+    <h4 align="center" style="color:#1976D2;">• Earl Raid Studios®:</h4>
+    <br>
+    <p align="center">As Earl Raid StudiosⓇ we have been functioning from June 2020 until late December 2021. Earl Raid Studios® had the best HR Team and Developers in our whole past history, we were not only continuing some of the GreenZone® Roblox projects and making our own Minecraft server but we also made simple apps and games for Android devices. Our HR Team and our other Teams were really stable in Earl Raid Studios®. As said in late December 2021 Earl Raid Studios® stopped existing, not because of the lack of resources or workers but because we changed the name of our Studio.</p>
+    <br>
+    <br>
+    <br>
+    <h4 align="center" style="color:#1976D2;">• K-Studios®:</h4>
+    <br>
+    <p align="center">Late December 2021 we named our Studio K-Studios and continued on making both Roblox & Minecraft servers and simple apps and games for Android devices. Late December 2022 we discontinued the managing process of any Roblox and Minecraft servers but in return we got way better in development of apps and games for Android devices and also we started making some simple *.bat and *.vbs projects for Windows devices (PCs). And this studio lives till now, till today!</p>
 </body>
 </html>
