--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>K-Studios - Home</title>
+<link rel="icon" type="image/x-icon" href="/K-Studios_Website/favicon.ico">
 <style>
     ul {
         list-style-type: none;
@@ -42,7 +43,16 @@
                 background-repeat: no-repeat;
                 background-attachment: fixed;
             }
+      
+      footer {
+        background-color: #212121;
+        color: white;
+        padding: 10px;
+        text-align: center;
+        font-family: 'Audiowide', sans-serif;
+      }
 </style>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 </head>
 <body>
     <ul>
@@ -51,5 +61,10 @@
         <li><a href="/K-Studios_Website/contact">Contact Us</a></li>
         <li style="float:right"><a href="/K-Studios_Website/about">About K-Studios</a></li>
     </ul>
+
+    <footer>
+      <p>K-Studios® - All rights reserved!</p>
+      <p>2019 - 2023</p>
+    </footer>
 </body>
 </html>
