--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>K-Studios - Contact Us</title>
+<link rel="icon" type="image/x-icon" href="/K-Studios_Website/favicon.ico">
 <style>
     ul {
         list-style-type: none;
@@ -42,7 +43,25 @@
                 background-repeat: no-repeat;
                 background-attachment: fixed;
             }
+
+      footer {
+        color: white;
+        font-family: 'Audiowide', sans-serif;
+        padding: 10px;
+        background-color: #212121;
+        text-align: center;
+      }
+
+      #contactor {
+        background-color: #212121;
+        color: white;
+        text-align: center;
+        border: 4px solid white;
+        border-radius: 12px;
+        width: 250px;
+      }
 </style>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 </head>
 <body>
     <ul>
@@ -51,5 +70,26 @@
         <li><a class="active" href="https://exkayem.github.io/K-Studios_Website/contact">Contact Us</a></li>
         <li style="float:right"><a href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
     </ul>
+
+    <div id="contactor">
+      <form method="post" action="/K-Studios_Website/action_page.php">
+        <label>Your Email:</label><br>
+        <input type="email" id="email"><br>
+        <label>Your Name:</label><br>
+        <input type="text" id="name"><br>
+        <label>Your Age:</label><br>
+        <input type="number" id="age"><br>
+        <label>Contact Reason</label><br>
+        <input type="text" id="reason"><br>
+        <label>Your Message</label><br>
+        <input type="text" id="message"><br>
+        <input type="submit" value="Send Message to K-Studios">
+      </form>
+    </div>
+
+    <footer>
+      <p>K-Studios® - All rights reserved!</p>
+      <p>2019 - 2023</p>
+    </footer>
 </body>
 </html>
