--- a/apps.html
+++ b/apps.html
@@ -51,44 +51,58 @@
         text-align: center;
         font-family: 'Audiowide', sans-serif;
       }
+
+      #apps {
+        font-family: 'Audiowide' sans-serif;
+      }
         
       #apps th {
         background-color: #04AA6D;
         color: white;
-        border: 4px solid #212121;
-        font-family: 'Audiowide' sans-serif;
+        border: 1px solid #212121;
+        text-align: center;
       }
 
       #apps td {
         background-color: #212121;
         color: white;
-        border: 4px solid #04AA6D;
+        border: 1px solid #04AA6D;
+        text-align: center;
+        transition-duration: 0.4s;
+      }
+
+      #apps td:hover {
+        background-color: #444444;
       }
 
       #but1 {
-        transition-duration: 4s;
-        border: 4px solid #04AA6D;
+        transition-duration: 0.4s;
+        border: 1px solid #04AA6D;
         border-radius: 12px;
         background-color: white;
         color: black;
+        font-family: 'Audiowide' sans-serif;
       }
 
       #but1:hover {
         background-color: #04AA6D;
         color: white;
+        font-family: 'Audiowide' sans-serif;
       }
 
       #but2 {
-        transition-duration: 4s;
-        border: 4px solid #04AA6D;
+        transition-duration: 0.4s;
+        border: 1px solid #04AA6D;
         border-radius: 12px;
         background-color: white;
         color: black;
+        font-family: 'Audiowide' sans-serif;
       }
 
       #but2:hover {
         background-color: #04AA6D;
         color: white;
+        font-family: 'Audiowide' sans-serif;
       }
 </style>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
@@ -101,7 +115,7 @@
         <li style="float:right"><a href="/K-Studios_Website/about">About K-Studios</a></li>
     </ul>
 
-    <h1>K-Studios Applications</h1><br>
+    <h1 align="center">K-Studios Applications</h1><br>
 
     <table id="apps">
       <tr>
