--- a/contact.html
+++ b/contact.html
@@ -51,15 +51,6 @@
         background-color: #212121;
         text-align: center;
       }
-
-      #contactor {
-        background-color: #212121;
-        color: white;
-        text-align: center;
-        border: 4px solid white;
-        border-radius: 12px;
-        width: 250px;
-      }
 </style>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 </head>
@@ -71,21 +62,7 @@
         <li style="float:right"><a href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
     </ul>
 
-    <div id="contactor">
-      <form method="post" action="/K-Studios_Website/action_page.php">
-        <label>Your Email:</label><br>
-        <input type="email" id="email"><br>
-        <label>Your Name:</label><br>
-        <input type="text" id="name"><br>
-        <label>Your Age:</label><br>
-        <input type="number" id="age"><br>
-        <label>Contact Reason</label><br>
-        <input type="text" id="reason"><br>
-        <label>Your Message</label><br>
-        <input type="text" id="message"><br>
-        <input type="submit" value="Send Message to K-Studios">
-      </form>
-    </div>
+    <p align="center">Not available yet...</p>
 
     <footer>
       <p>K-Studios® - All rights reserved!</p>
