--- a/about.html
+++ b/about.html
@@ -48,26 +48,20 @@
   width: 100%;
 }
 
-#customers td, #customers th {
-  padding: 8px;
-}
-
-#customers tr:nth-child(even){background-color: #f2f2f2;}
-
-#customers tr:hover {background-color: #ddd;}
+#customers tr:hover {background-color: #444444;}
 
 #customers th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
   background-color: #04AA6D;
-  border: 8px solid #212121;
+  border: 1px solid #212121;
   color: white;
   font-family: 'Audiowide', sans-serif;
 }
 
 #customers td {
-  border: 8px solid #04AA6D;
+  border: 1px solid #04AA6D;
   background-color: #212121;
   color: white;
 }
@@ -77,18 +71,19 @@
   padding-bottom: 12px;
   text-align: left;
   background-color: #04AA6D;
-  border: 8px solid #212121;
+  border: 1px solid #212121;
   color: white;
   font-family: 'Audiowide', sans-serif;
 }
 
 #information td {
-  border: 8px solid #04AA6D;
+  border: 1px solid #04AA6D;
   background-color: #212121;
   color: white;
+  font-family: 'Audiowide', sans-serif;
 }
 
-#information td:hover {background-color: #9E9E9E;}
+#information td:hover {background-color: #444444;}
 
 footer {
   background-color: #212121;
