--- a/about.html
+++ b/about.html
@@ -66,26 +66,30 @@
   color: white;
 }
 
+#information {
+  width: 100%;
+  text-align: center;
+  font-family: 'Audiowide', sans-serif;
+}
+
 #information th {
   padding-top: 12px;
   padding-bottom: 12px;
-  text-align: left;
   background-color: #04AA6D;
   border: 1px solid #212121;
   color: white;
-  font-family: 'Audiowide', sans-serif;
 }
 
 #information td {
   border: 1px solid #04AA6D;
   background-color: #212121;
   color: white;
-  font-family: 'Audiowide', sans-serif;
 }
 
 #information td:hover {background-color: #444444;}
 
 footer {
+  align-self: flex-end;
   background-color: #212121;
   padding: 10px;
   color: white;
