--- a/apps.html
+++ b/apps.html
@@ -54,20 +54,21 @@
 
       #apps {
         font-family: 'Audiowide' sans-serif;
+        text-align: center;
+        width: 100%;
+        border-radius: 12px;
       }
         
       #apps th {
         background-color: #04AA6D;
         color: white;
         border: 1px solid #212121;
-        text-align: center;
       }
 
       #apps td {
         background-color: #212121;
         color: white;
         border: 1px solid #04AA6D;
-        text-align: center;
         transition-duration: 0.4s;
       }
 
