--- a/apps.html
+++ b/apps.html
@@ -63,6 +63,7 @@
         background-color: #04AA6D;
         color: white;
         border: 1px solid #212121;
+        height: 50px;
       }
 
       #apps td {
@@ -70,6 +71,7 @@
         color: white;
         border: 1px solid #04AA6D;
         transition-duration: 0.4s;
+        height: 100px;
       }
 
       #apps td:hover {
@@ -127,12 +129,12 @@
       <tr>
         <td>K-Pay</td>
         <td>1.0 (Alpha)</td>
-        <td><button id="but1" href="https://www.mediafire.com/file/3tg3i52nioapkms/KPay.apk/file">Download K-Pay</button></td>
+        <td><p id="but1" href="https://www.mediafire.com/file/3tg3i52nioapkms/KPay.apk/file">Download K-Pay</p></td>
       </tr>
       <tr>
         <td>AuthBackup Codes</td>
         <td>1.0</td>
-        <td><button id="but2" href="https://www.mediafire.com/file/7g3rd82kw3a00rp/AuthBackup_Codes.apk/file">Download AuthBackup Codes</button></td>
+        <td><p id="but2" href="https://www.mediafire.com/file/7g3rd82kw3a00rp/AuthBackup_Codes.apk/file">Download AuthBackup Codes</p></td>
       </tr>
     </table>
 
