--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,7 @@
     </ul>
 
     <p align="center">Not available yet...</p>
+    <p align="center">New contact options are about to come! For now if you want to contact us, please use either K-Pay app or AuthBackup Codes app.</p>
 
     <footer>
       <p>K-Studios® - All rights reserved!</p>
