--- a/apps.html
+++ b/apps.html
@@ -38,10 +38,10 @@
       }
 
       body {
-                background-image: url('https://i.imgur.com/jXUs4Wu.png');
-                background-size: cover; /* Adjust background size as needed */
-                background-repeat: no-repeat;
-                background-attachment: fixed;
+        background-image: url('https://i.imgur.com/jXUs4Wu.png');
+        background-size: cover; /* Adjust background size as needed */
+        background-repeat: no-repeat;
+        background-attachment: fixed;
             }
 
       footer {
@@ -56,7 +56,7 @@
         font-family: 'Audiowide' sans-serif;
         text-align: center;
         width: 100%;
-        border-radius: 12px;
+        border-radius: 24px;
       }
         
       #apps th {
@@ -78,9 +78,8 @@
         background-color: #444444;
       }
 
-      #textHeader {
-        font-family: 'Audiowide' sans-serif;
-        size: 50px;
+      #link {
+        color: white;
       }
 </style>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
@@ -104,12 +103,12 @@
       <tr>
         <td>K-Pay</td>
         <td>1.0 (Alpha)</td>
-        <td><a href="https://www.mediafire.com/file/3tg3i52nioapkms/KPay.apk/file">Download</a></td>
+        <td><a id="link" href="https://www.mediafire.com/file/3tg3i52nioapkms/KPay.apk/file">Download</a></td>
       </tr>
       <tr>
         <td>AuthBackup Codes</td>
         <td>1.0</td>
-        <td><a href="https://www.mediafire.com/file/7g3rd82kw3a00rp/AuthBackup_Codes.apk/file">Download</a></td>
+        <td><a id="link" href="https://www.mediafire.com/file/7g3rd82kw3a00rp/AuthBackup_Codes.apk/file">Download</a></td>
       </tr>
     </table>
 
