--- a/about.html
+++ b/about.html
@@ -43,9 +43,11 @@
                 background-repeat: no-repeat;
                 background-attachment: fixed;
             }
-    #customers {
-  border-collapse: collapse;
+#customers {
+  border: 5px;
   width: 100%;
+  text-align: center;
+  font-family: 'Audiowide', sans-serif;
 }
 
 #customers tr:hover {background-color: #444444;}
@@ -55,35 +57,40 @@
   padding-bottom: 12px;
   text-align: left;
   background-color: #04AA6D;
-  border: 1px solid #212121;
+  border: 2.5px solid #212121;
   color: white;
   font-family: 'Audiowide', sans-serif;
+  height: 50px;
 }
 
 #customers td {
-  border: 1px solid #04AA6D;
+  border: 2.5px solid white;
   background-color: #212121;
   color: white;
+  height: 100px;
 }
 
 #information {
   width: 100%;
   text-align: center;
   font-family: 'Audiowide', sans-serif;
+  border: 5px;
 }
 
 #information th {
   padding-top: 12px;
   padding-bottom: 12px;
   background-color: #04AA6D;
-  border: 1px solid #212121;
+  border: 2.5px solid #212121;
   color: white;
+  height: 50px;
 }
 
 #information td {
   border: 1px solid #04AA6D;
   background-color: #212121;
   color: white;
+  height: 250px;
 }
 
 #information td:hover {background-color: #444444;}
