--- a/about.html
+++ b/about.html
@@ -114,6 +114,8 @@ footer {
         <li style="float:right"><a class="active" href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
     </ul>
 
+    <h1><b><mark><ins>THIS PAGE WILL BE REMADE SOON.</ins></mark></b></h1>
+
     <h1 align="center" style="font-family:Audiowide, sans-serif;">About K-Studios Members</h1>
     
   <table id="customers">
@@ -191,7 +193,7 @@ footer {
   </table>
   <footer>
     <p>K-Studios® - All rights reserved!</p>
-    <p>2019 - 2023</p>
+    <p>2019 - 2024</p>
   </footer>
 </body>
 </html>
