--- a/apps.html
+++ b/apps.html
@@ -101,20 +101,20 @@
         <th>Link to the Applications</th>
       </tr>
       <tr>
-        <td>K-Pay</td>
-        <td>1.0 (Alpha)</td>
-        <td><a id="link" href="https://www.mediafire.com/file/3tg3i52nioapkms/KPay.apk/file">Download</a></td>
+        <td><del>K-Pay</del> App Deleted</td>
+        <td><del>1.0 (Alpha)</del></td>
+        <td><del>App Deleted</del></td>
       </tr>
       <tr>
-        <td>AuthBackup Codes</td>
-        <td>1.0</td>
-        <td><a id="link" href="https://www.mediafire.com/file/7g3rd82kw3a00rp/AuthBackup_Codes.apk/file">Download</a></td>
+        <td><del>AuthBackup Codes</del> App Deleted</td>
+        <td><del>1.0</del></td>
+        <td><del>App Deleted</del></td>
       </tr>
     </table>
 
     <footer>
       <p>K-Studios® - All rights reserved!</p>
-      <p>2019 - 2023</p>
+      <p>2019 - 2024</p>
     </footer>
 </body>
 </html>
