--- a/contact.html
+++ b/contact.html
@@ -62,12 +62,12 @@
         <li style="float:right"><a href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
     </ul>
 
-    <p align="center">Not available yet...</p>
-    <p align="center">New contact options are about to come! For now if you want to contact us, please use either K-Pay app or AuthBackup Codes app.</p>
+    <p align="center">Soon-to-be available...</p>
+    <p align="center">New contact options are about to come!</p>
 
     <footer>
       <p>K-Studios® - All rights reserved!</p>
-      <p>2019 - 2023</p>
+      <p>2019 - 2024</p>
     </footer>
 </body>
 </html>
