--- a/about.html
+++ b/about.html
@@ -53,13 +53,13 @@
 #customers tr:hover {background-color: #444444;}
 
 #customers th {
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding-top: 2px;
+  padding-bottom: 2px;
   text-align: left;
   background-color: #04AA6D;
-  border: 2.5px solid #212121;
+  border: 1px solid #212121;
   color: white;
-  font-family: 'Audiowide', sans-serif;
+  font-family: verdana;
   height: 50px;
 }
 
@@ -116,7 +116,7 @@ footer {
 
     <h1><b><mark><ins>THIS PAGE WILL BE REMADE SOON.</ins></mark></b></h1>
 
-    <h1 align="center" style="font-family:Audiowide, sans-serif;">About K-Studios Members</h1>
+    <h1 align="center" style="font-family:verdana;">About K-Studios Members</h1>
     
   <table id="customers">
     <tr>
