--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 #customers th {
   padding-top: 2px;
   padding-bottom: 2px;
-  text-align: left;
+  text-align: center;
   background-color: #04AA6D;
   border: 1px solid #212121;
   color: white;
@@ -64,7 +64,7 @@
 }
 
 #customers td {
-  border: 2.5px solid white;
+  border: 1px solid white;
   background-color: #212121;
   color: white;
   height: 100px;
@@ -74,14 +74,14 @@
   width: 100%;
   text-align: center;
   font-family: 'Audiowide', sans-serif;
-  border: 5px;
+  border: 1px;
 }
 
 #information th {
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding-top: 2px;
+  padding-bottom: 2px;
   background-color: #04AA6D;
-  border: 2.5px solid #212121;
+  border: 1px solid #212121;
   color: white;
   height: 50px;
 }
