--- a/about.html
+++ b/about.html
@@ -44,36 +44,30 @@
                 background-attachment: fixed;
             }
 #customers {
-  border: 5px;
   width: 100%;
   text-align: center;
-  font-family: 'Audiowide', sans-serif;
+  font-family: verdana;
 }
 
 #customers tr:hover {background-color: #444444;}
+
+#customers tr {border-bottom: 1px solid #ddd;}
 
 #customers th {
   padding-top: 2px;
   padding-bottom: 2px;
   text-align: center;
-  background-color: #04AA6D;
-  border: 1px solid #212121;
-  color: white;
-  font-family: verdana;
   height: 50px;
 }
 
 #customers td {
-  border: 1px solid white;
-  background-color: #212121;
-  color: white;
   height: 100px;
 }
 
 #information {
   width: 100%;
   text-align: center;
-  font-family: 'Audiowide', sans-serif;
+  font-family: verdana;
   border: 1px;
 }
 
@@ -100,7 +94,7 @@ footer {
   background-color: #212121;
   padding: 10px;
   color: white;
-  font-family: 'Audiowide', sans-serif;
+  font-family: verdana;
   text-align: center;
 }
 </style>
