--- a/about.html
+++ b/about.html
@@ -44,7 +44,6 @@
                 background-attachment: fixed;
             }
 #customers {
-  width: 100%;
   text-align: center;
   font-family: verdana;
 }
@@ -54,14 +53,13 @@
 #customers tr {border-bottom: 1px solid #ddd;}
 
 #customers th {
-  padding-top: 2px;
-  padding-bottom: 2px;
-  text-align: center;
-  height: 50px;
+  background-color: #292929;
+  color: #868786;
 }
 
 #customers td {
-  height: 100px;
+  background-color: #444444;
+  color: #A9A8A8;
 }
 
 #information {
