--- a/about.html
+++ b/about.html
@@ -44,13 +44,12 @@
                 background-attachment: fixed;
             }
 #customers {
+  width: 50%;
   text-align: center;
   font-family: verdana;
 }
 
-#customers tr:hover {background-color: #444444;}
-
-#customers tr {border-bottom: 1px solid #ddd;}
+#customers td:hover {background-color: #09477F;}
 
 #customers th {
   background-color: #292929;
@@ -63,29 +62,22 @@
 }
 
 #information {
-  width: 100%;
+  width: 50%;
   text-align: center;
   font-family: verdana;
-  border: 1px;
 }
 
 #information th {
-  padding-top: 2px;
-  padding-bottom: 2px;
-  background-color: #04AA6D;
-  border: 1px solid #212121;
-  color: white;
-  height: 50px;
+  background-color: #292929;
+  color: #868786;
 }
 
 #information td {
-  border: 1px solid #04AA6D;
-  background-color: #212121;
-  color: white;
-  height: 250px;
+  background-color: #444444;
+  color: #A9A8A8;
 }
 
-#information td:hover {background-color: #444444;}
+#information td:hover {background-color: #09477F;}
 
 footer {
   align-self: flex-end;
@@ -150,7 +142,7 @@ footer {
     <br>
     <br>
     <br>
-    <h1 align="center" style="font-family:Audiowide, sans-serif;">About K-Studios</h1>
+    <h1 align="center" style="font-family:verdana;">About K-Studios</h1>
   <table id="information">
     <tr>
       <th>Studio Name</th>
