--- a/about.html
+++ b/about.html
@@ -47,6 +47,7 @@
   width: 50%;
   text-align: center;
   font-family: verdana;
+  object-position: center;
 }
 
 #customers td:hover {background-color: #09477F;}
