--- a/about.html
+++ b/about.html
@@ -54,10 +54,12 @@ body, html {
 
 .table_container1 {
   display: flex;
+  flex-direction: column;
 }
 
 .table_container2 {
   display: flex;
+  flex-direction: column;
 }
 
 #customers {
