--- a/about.html
+++ b/about.html
@@ -49,6 +49,7 @@
   text-align: center;
   font-family: verdana;
   margin: 0 auto;
+  transition-duration: 0.4s;
 }
 
 #customers td:hover {background-color: #09477F;}
@@ -68,6 +69,7 @@
   text-align: center;
   font-family: verdana;
   margin: 0 auto;
+  transition-duration: 0.4s;
 }
 
 #information th {
