--- a/apps.html
+++ b/apps.html
@@ -49,40 +49,35 @@
         background-color: #212121;
         color: white;
         text-align: center;
-        font-family: 'Audiowide', sans-serif;
+        font-family: verdana;
       }
 
       #apps {
-        font-family: 'Audiowide' sans-serif;
+        font-family: verdana;
         text-align: center;
-        width: 100%;
-        border-radius: 24px;
+        width: 50%;
+        margin: 0 auto;
       }
         
       #apps th {
-        background-color: #04AA6D;
-        color: white;
-        border: 5px solid #212121;
-        height: 50px;
+        background-color: #292929;
+        color: #868786;
       }
 
       #apps td {
-        background-color: #212121;
-        color: white;
-        border: 5px solid white;
+        background-color: #444444;
+        color: #A9A8A8;
         transition-duration: 0.4s;
-        height: 100px;
       }
 
       #apps td:hover {
-        background-color: #444444;
+        background-color: #09477F;
       }
 
       #link {
         color: white;
       }
 </style>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 </head>
 <body>
     <ul>
@@ -92,7 +87,7 @@
         <li style="float:right"><a href="/K-Studios_Website/about">About K-Studios</a></li>
     </ul>
 
-    <h1 id="textHeader" align="center">K-Studios Applications</h1><br>
+    <h1 id="textHeader" align="center" style="font-family:verdana;">K-Studios Applications</h1><br>
 
     <table id="apps">
       <tr>
@@ -101,17 +96,13 @@
         <th>Link to the Applications</th>
       </tr>
       <tr>
-        <td><del>K-Pay</del> App Deleted</td>
-        <td><del>1.0 (Alpha)</del></td>
-        <td><del>App Deleted</del></td>
-      </tr>
-      <tr>
-        <td><del>AuthBackup Codes</del> App Deleted</td>
-        <td><del>1.0</del></td>
-        <td><del>App Deleted</del></td>
+        <td>PD Computer</td>
+        <td>0.0.1 (Alpha Testing)</td>
+        <td>None yet (will be available since Beta)</td>
       </tr>
     </table>
-
+  <br>
+  <br>
     <footer>
       <p>K-Studios® - All rights reserved!</p>
       <p>2019 - 2024</p>
