--- a/apps.html
+++ b/apps.html
@@ -24,6 +24,7 @@
       li a {
         display: block;
         color: white;
+        font-family: verdana;
         text-align: center;
         padding: 16px 16px;
         text-decoration: none;
