--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       li a {
         display: block;
         color: white;
+        font-family: verdana;
         text-align: center;
         padding: 16px 16px;
         text-decoration: none;
@@ -49,10 +50,9 @@
         color: white;
         padding: 10px;
         text-align: center;
-        font-family: 'Audiowide', sans-serif;
+        font-family: verdana;
       }
 </style>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 </head>
 <body>
     <ul>
@@ -61,7 +61,8 @@
         <li><a href="/K-Studios_Website/contact">Contact Us</a></li>
         <li style="float:right"><a href="/K-Studios_Website/about">About K-Studios</a></li>
     </ul>
-
+    <br>
+    <br>
     <footer>
       <p>K-Studios® - All rights reserved!</p>
       <p>2019 - 2024</p>
