--- a/contact.html
+++ b/contact.html
@@ -84,6 +84,7 @@
         <li><a href="https://exkayem.github.io/K-Studios_Website/">Home</a></li>
         <li><a href="https://exkayem.github.io/K-Studios_Website/apps">Our Applications</a></li>
         <li><a class="active" href="https://exkayem.github.io/K-Studios_Website/contact">Contact Us</a></li>
+        <li><a href="https://exkayem.github.io/K-Studios_Website/clips">Clips</a></li>
         <li style="float:right"><a href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
     </ul>
 
