--- a/clips.html
+++ b/clips.html
@@ -59,12 +59,16 @@
   #ClipsRow {
     width: 100%;
     height: 315px;
+    display: flex;
+    gap: 15px;
   }
 
   #ClipsRow div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #212121;
-    margin-left: 15px;
-    margin-right: 15px;
+    flex: 1;
   }
 
   #NoneInfo {
@@ -88,7 +92,7 @@ footer {
     <ul>
         <li><a href="https://exkayem.github.io/K-Studios_Website/">Home</a></li>
         <li><a href="https://exkayem.github.io/K-Studios_Website/apps">Our Applications</a></li>
-        <li><a href="https://exkayem.github.io/K-Studios_Website/contact">Contact Us</a><p id="NewMark">NEW!</p></li>
+        <li><a href="https://exkayem.github.io/K-Studios_Website/contact">Contact Us</a></li>
         <li><a class="active" href="https://exkayem.github.io/K-Studios_Website/clips">Clips</a></li>
         <li style="float:right"><a href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
     </ul>
@@ -97,13 +101,52 @@ footer {
   <br>
   <div id="ClipsRow">
     <div>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/pq_ZhhgHOUs?si=4_4MKmFyX45vnmZF&amp;clip=Ugkxzfus0L0Gse4HAFIZIPAVuh5RNmT1YCgp&amp;clipt=EJ-0FBiY5xQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/pq_ZhhgHOUs?si=4_4MKmFyX45vnmZF&amp;clip=Ugkxzfus0L0Gse4HAFIZIPAVuh5RNmT1YCgp&amp;clipt=EJ-0FBiY5xQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <div>
       <h1 id="NoneInfo">No Clips yet...</h1>
     </div>
     <div>
       <h1 id="NoneInfo">No Clips yet...</h1>
+    </div>
+  </div>
+  <br>
+  <br>
+  <div id="ClipsRow">
+  	<div>
+    	<h1 id="NoneInfo">No Clips yet...</h1>
+    </div>
+    <div>
+    	<h1 id="NoneInfo">No Clips yet...</h1>
+    </div>
+    <div>
+    	<h1 id="NoneInfo">No Clips yet...</h1>
+    </div>
+  </div>
+  <br>
+  <br>
+   <div id="ClipsRow">
+  	<div>
+    	<h1 id="NoneInfo">No Clips yet...</h1>
+    </div>
+    <div>
+    	<h1 id="NoneInfo">No Clips yet...</h1>
+    </div>
+    <div>
+    	<h1 id="NoneInfo">No Clips yet...</h1>
+    </div>
+  </div>
+  <br>
+  <br>
+   <div id="ClipsRow">
+  	<div>
+    	<h1 id="NoneInfo">No Clips yet...</h1>
+    </div>
+    <div>
+    	<h1 id="NoneInfo">No Clips yet...</h1>
+    </div>
+    <div>
+    	<h1 id="NoneInfo">No Clips yet...</h1>
     </div>
   </div>
   <br>
