--- a/about.html
+++ b/about.html
@@ -65,25 +65,34 @@
   transition-duration: 0.4s;
 }
 
-#information {
-  width: 50%;
+#HistoryHolder {
   text-align: center;
-  font-family: verdana;
+  width: 75%;
+  align-items: center;
+  justify-content: center;
   margin: 0 auto;
 }
 
-#information th {
-  background-color: #292929;
+#HistoryTitle {
+  font-family: verdana;
   color: #868786;
+  background-color: #292929;
+  border-radius: 15px;
+  padding: 10px;
 }
 
-#information td {
-  background-color: #444444;
+#HistoryText {
+  font-family: verdana;
   color: #A9A8A8;
+  background-color: #444444;
+  border-radius: 15px;
+  padding: 10px;
   transition-duration: 0.4s;
 }
 
-#information td:hover {background-color: #09477F;}
+#HistoryText:hover {
+  background-color: #09477F;
+}
 
 footer {
   align-self: flex-end;
@@ -105,86 +114,65 @@ footer {
         <li style="float:right"><a class="active" href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
     </ul>
 
-    <h1 align="center" style="font-family:verdana;">About K-Studios Members</h1>
+    <h1 align="center" style="font-family:verdana;">K-Studios® Team</h1>
     
   <div>
     <table id="customers">
       <tr>
         <th>Team Member</th>
-        <th>Working in K-Studios since</th>
-        <th>Role</th>
+        <th>Working since</th>
+        <th>Position</th>
+        <th>Additional Notes</th>
       </tr>
       <tr>
         <td>ExKayEm_PL</td>
-        <td>Beginning</td>
+        <td>FIGHTZONE®</td>
         <td>Founder</td>
+        <td>His real name is Kacper, he comes from Poland and speaks three languages.</td>
       </tr>
       <tr>
-        <td>MarcPL</td>
-        <td>Beginning</td>
+        <td>Asrw007</td>
+        <td>FIGHTZONE®</td>
         <td>Co-Founder</td>
+        <td>He's also from Poland. He's a cool guy, and probably a gym rat.</td>
       </tr>
       <tr>
-        <td>AmyTheGoddess</td>
-        <td>Beginning</td>
+        <td>TofuDelivery</td>
+        <td>GreenZone®</td>
        <td>Chief of STAFF</td>
+       <td>This guy is from Spain and I must say he is the best man I've ever met from the whole STAFF (excluding Asrw007)</td>
       </tr>
       <tr>
-       <td>ZenekBezSpodenekXD</td>
-       <td>12.01.2021</td>
-       <td>STAFF</td>
-      </tr>
-      <tr>
-       <td>Maxim</td>
-       <td>05.02.2021</td>
-       <td>STAFF</td>
-      </tr>
-      <tr>
-       <td>HayoD21</td>
-       <td>25.02.2021</td>
-       <td>STAFF</td>
-      </tr>
-    </table>
-  </div>
-    <br>
-    <br>
-    <br>
-    <h1 align="center" style="font-family:verdana;">About K-Studios</h1>
-    <br>
-  <div>
-    <table id="information">
-      <tr>
-       <th>Studio Name</th>
-       <th>Since when</th>
-       <th>Until when</th>
-       <th>History</th>
-      </tr>
-      <tr>
-       <td>FIGHTZONE®</td>
-       <td>Early 2019</td>
-       <td>Early 2020</td>
-       <td>Firstly K-Studios was named FIGHTZONE® and we were mainly creating and developing games on the Roblox platform. We were a bit popular since our start and we have been a trusted Studio. Sadly our Studio has been announced for discontinuation in the early 2020.</td>
-      </tr>
-      <tr>
+       <td>Szymin22</td>
        <td>GreenZone®</td>
-       <td>Februar 2020</td>
-       <td>April 2020</td>
-       <td>Afterwards our Studio has been replaced with the name GreenZone® and a totally new HR Team but we had the same people in lower positions. We were continuing the games on the Roblox platform but we also created our own Minecraft servers. To not lie we were more motivated on Minecraft than Roblox. Sadly shortly afterwards, in April, we were abandoned by the most important persons in our HR Team leading to another discontinuation.</td>
-      </tr>
-      <tr>
-        <td>Earl Raid Studios®</td>
-        <td>June 2020</td>
-        <td>Late December 2021</td>
-        <td>As Earl Raid StudiosⓇ we have been functioning from June 2020 until late December 2021. Earl Raid Studios® had the best HR Team and Developers in our whole past history, we were not only continuing some of the GreenZone® Roblox projects and making our own Minecraft server but we also made simple apps and games for Android devices. Our HR Team and our other Teams were really stable in Earl Raid Studios®. As said in late December 2021 Earl Raid Studios® stopped existing, not because of the lack of resources or workers but because we changed the name of our Studio.</td>
-      </tr>
-      <tr>
-        <td>K-Studios®</td>
-       <td>Late December 2021</td>
-       <td>-</td>
-       <td>Late December 2021 we named our Studio K-Studios and continued on making both Roblox & Minecraft servers and simple apps and games for Android devices. Late December 2022 we discontinued the managing process of any Roblox and Minecraft servers but in return we got way better in development of apps and games for Android devices and also we started making some simple *.bat and *.vbs projects for Windows devices (PCs). And this studio lives till now, till today!</td>
+       <td>STAFF</td>
+       <td>Another polish guy. He also is a funny dude. Once we edited a mod to ETS2 giving us a truck that would drive faster than Bugatti, he was in a ditch every time.</td>
       </tr>
     </table>
   </div>
+    <br>
+    <br>
+    <br>
+    <h1 align="center" style="font-family:verdana;">History of K-Studios®</h1>
+    <br>
+    <div id="HistoryHolder">
+      <h3 id="HistoryTitle">FIGHTZONE®</h3>
+      <p id="HistoryText">Firstly, K-Studios was originally named FIGHTZONE®, and we mainly created and developed games on the Roblox platform. We were somewhat popular from the start and had been a trusted studio. Unfortunately, our studio was discontinued in early 2020.</p>
+      <br>
+      <br>
+      <h3 id="HistoryTitle">GreenZone®</h3>
+      <p id="HistoryText">Afterward, our studio was renamed GreenZone® and given a completely new HR team, though we kept the same people in lower positions. We continued developing games on the Roblox platform, but we also created our own Minecraft servers. To be honest, we were more motivated by Minecraft than Roblox. Unfortunately, shortly after, in April, we were abandoned by the most important members of our HR team, which led to another discontinuation.</p>
+      <br>
+      <br>
+      <h3 id="HistoryTitle">Earl Raid Studios®</h3>
+      <p id="HistoryText">Earl Raid Studios® operated from June 2020 until late December 2021. During this period, we had the best HR team and developers in our entire history. We continued some of the GreenZone® Roblox projects, maintained our Minecraft server, and also developed simple apps and games for Android devices. Our HR team and other departments were very stable at Earl Raid Studios®. As mentioned, in late December 2021, Earl Raid Studios® ceased to exist, not due to a lack of resources or workers, but because we decided to change the name of our studio and change our history for the better.</p>
+      <br>
+      <br>
+      <h3 id="HistoryTitle">K-Studios®</h3>
+      <p id="HistoryText">In late December 2021, we rebranded our studio as K-Studios® and continued creating both Roblox and Minecraft servers, along with simple apps and games for Android devices. By late December 2022, our team had dropped to just four members, and we were forced to discontinue managing any Roblox and Minecraft servers, as well as our official Discord server. Despite these challenges, we shifted our focus to improving our development of apps and games for Android devices and began working on simple *.bat and *.vbs projects for Windows PCs. During this time, we also created and have been developing this website, which reflects our journey.</p>
+      <br>
+      <p id="HistoryText">Today, this website stands as a testament to how a small studio’s history and struggles shaped its evolution, presenting a series of problems and solutions that ultimately led to us becoming only a memory. And yet, K-Studios lives on, continuing to adapt and grow despite the odds.</p>
+    </div>
   <br>
   <br>
   <footer>
