--- a/apps.html
+++ b/apps.html
@@ -102,6 +102,11 @@
         <td>0.0.2 (Alpha Testing)</td>
         <td>None yet (will be available since Beta)</td>
       </tr>
+      <tr>
+        <td>K-Chat</td>
+        <td>0.0.1</td>
+        <td>None yet, will be available soon though!</td>
+      </tr>
     </table>
   <br>
   <br>
