--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <li><a href="/K-Studios_Website/apps">Our Applications</a></li>
         <li><a href="/K-Studios_Website/contact">Contact Us</a></li>
         <li><a href="https://exkayem.github.io/K-Studios_Website/clips">Clips</a></li>
-        <li style="float:right;"><a>My Profile</a></li>
+        <li style="float:right; border-right: 0.5px solid #bbb;"><a href="/K-Studios_Website/profile">My Profile</a></li>
         <li style="float:right"><a href="/K-Studios_Website/about">About K-Studios</a></li>
     </ul>
     <br>
