--- a/about.html
+++ b/about.html
@@ -103,16 +103,16 @@ footer {
   text-align: center;
 }
 </style>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 </head>
 <body>
     <ul>
-        <li><a href="https://exkayem.github.io/K-Studios_Website/">Home</a></li>
-        <li><a href="https://exkayem.github.io/K-Studios_Website/apps">Our Applications</a></li>
-        <li><a href="https://exkayem.github.io/K-Studios_Website/contact">Contact Us</a></li>
-        <li><a href="https://exkayem.github.io/K-Studios_Website/clips">Clips</a></li>
-        <li style="float:right"><a class="active" href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
-    </ul>
+            <li><a href="https://exkayem.github.io/K-Studios_Website/">Home</a></li>
+            <li><a href="https://exkayem.github.io/K-Studios_Website/apps">Our Applications</a></li>
+            <li><a href="https://exkayem.github.io/K-Studios_Website/contact">Contact Us</a></li>
+            <li><a href="https://exkayem.github.io/K-Studios_Website/clips">Clips</a></li>
+            <li style="float:right;"><a href="/K-Studios_Website/profile">My Profile</a></li>
+            <li class="active" style="float:right; border-right: 0.5px solid #bbb;"><a class="active" href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
+        </ul>
 
     <h1 align="center" style="font-family:verdana;">K-Studios® Team</h1>
     
