--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
 </style>
 </head>
 <body>
-    <ul>
-        <li><a class="active" href="https://exkayem.github.io/K-Studios_Website/">Home</a></li>
-        <li><a href="/K-Studios_Website/apps">Our Applications</a></li>
-        <li><a href="/K-Studios_Website/contact">Contact Us</a></li>
-        <li><a href="https://exkayem.github.io/K-Studios_Website/clips">Clips</a></li>
-        <li style="float:right; border-right: 0.5px solid #bbb;"><a href="/K-Studios_Website/profile">My Profile</a></li>
-        <li style="float:right"><a href="/K-Studios_Website/about">About K-Studios</a></li>
-    </ul>
+  <ul>
+    <li class="active"><a href="https://exkayem.github.io/K-Studios_Website/">Home</a></li>
+    <li><a href="https://exkayem.github.io/K-Studios_Website/apps">Our Applications</a></li>
+    <li><a href="https://exkayem.github.io/K-Studios_Website/contact">Contact Us</a></li>
+    <li><a href="https://exkayem.github.io/K-Studios_Website/clips">Clips</a></li>
+    <li style="float:right;"><a href="/K-Studios_Website/profile">My Profile</a></li>
+    <li style="float:right; border-right: 0.5px solid #bbb;"><a class="active" href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
+</ul>
     <br>
     <br>
     <footer>
